<resources>
    <string name="app_name">Dev Device Info</string>
    <string name="title_hardware_software">Hardware &amp; Software</string>
    <string name="title_sensor">Sensor</string>
    <string name="title_screen">Screen</string>
    <string name="title_camera">Camera</string>
    <string name="title_camera_2">Camera 2</string>
    <string name="title_feature">Feature</string>
    <string name="title_app_list">App List</string>
    <string name="sync_from_server">Sync your device info from server</string>
    <string name="search">Search</string>
    <string name="sync_this_device">Sync this device</string>
    <string name="try_again">Try again</string>
    <string name="blank" />
    <string name="sample">Sample</string>
    <string name="hardware_and_software_android_info">Android Info</string>
    <string name="hardware_and_software_battery_info">Battery Info</string>
    <string name="hardware_and_software_build_info">Build Info</string>
    <string name="hardware_and_software_communication_info">Communication Info</string>
    <string name="hardware_and_software_cpu_info">CPU Info</string>
    <string name="hardware_and_software_gpu_info">GPU Info</string>
    <string name="hardware_and_software_memory_info">Memory Info</string>
    <string name="hardware_and_software_storage_info">Storage Info</string>
    <string name="screen_open_screen_measurement">Open Screen Measurement</string>
    <string name="camera">Camera</string>
    <string name="camera_does_not_available_description">This Camera API version does not available in this device</string>
    <string name="camera_permission_denied">Camera info is unavailable. Please allow application to access camera permission.</string>
    <string name="feature_description_app_widgets">The device supports app widgets.</string>
    <string name="feature_description_audio_low_latency">The audio pipeline of device is low-latency, more suitable for audio applications sensitive to delays or lag in sound input or output.</string>
    <string name="feature_description_audio_output">The device includes at least one form of audio output, such as speakers, audio jack or streaming over bluetooth.</string>
    <string name="feature_description_audio_pro">The device has professional audio level of functionality and performance.</string>
    <string name="feature_description_automotive">This is a device dedicated to showing UI on a vehicle headunit. A headunit here is defined to be inside a vehicle that may or may not be moving. A headunit uses either a primary display in the center console and/or additional displays in the instrument cluster or elsewhere in the vehicle. Headunit display(s) have limited size and resolution. The user will likely be focused on driving so limiting driver distraction is a primary concern. User input can be a variety of hard buttons, touch, rotary controllers and even mouse- like interfaces.</string>
    <string name="feature_description_backup">The device can perform backup and restore operations on installed applications.</string>
    <string name="feature_description_bluetooth">The device is capable of communicating with other devices via Bluetooth.</string>
    <string name="feature_description_bluetooth_low_energy">The device is capable of communicating with other devices via Bluetooth Low Energy radio.</string>
    <string name="feature_description_camera">The device has a camera facing away from the screen.</string>
    <string name="feature_description_camera_any">The device has at least one camera pointing in some direction.</string>
    <string name="feature_description_camera_autofocus">The camera of device supports auto-focus.</string>
    <string name="feature_description_camera_capability_manual_post_processing">At least one of the cameras on the device supports the manual post-processing capability level.</string>
    <string name="feature_description_camera_capability_manual_sensor">At least one of the cameras on the device supports the manual sensor capability level.</string>
    <string name="feature_description_camera_capability_raw">At least one of the cameras on the device supports the RAW capability level.</string>
    <string name="feature_description_camera_external">The device can support having an external camera connected to it. The external camera may not always be connected or available to applications to use.</string>
    <string name="feature_description_camera_flash">The camera of device supports flash.</string>
    <string name="feature_description_camera_front">The device has a front facing camera.</string>
    <string name="feature_description_camera_level_full">At least one of the cameras on the device supports the full hardware capability level.</string>
    <string name="feature_description_connection_service">The Connection Service API is enabled on the device.</string>
    <string name="feature_description_consumer_ir">The device is capable of communicating with consumer IR devices.</string>
    <string name="feature_description_device_admin">The device supports device policy enforcement via device admins.</string>
    <string name="feature_description_ethernet">This device supports ethernet.</string>
    <string name="feature_description_faketouch">The device does not have a touch screen, but does support touch emulation for basic events. For instance, the device might use a mouse or remote control to drive a cursor, and emulate basic touch pointer events like down, up, drag, etc. All devices that support android.hardware.touchscreen or a sub-feature are presumed to also support faketouch.</string>
    <string name="feature_description_faketouch_multitouch_distinct">The device does not have a touch screen, but does support touch emulation for basic events that supports distinct tracking of two or more fingers. This is an extension of FEATURE_FAKETOUCH for input devices with this capability. Note that unlike a distinct multitouch screen as defined by FEATURE_TOUCHSCREEN_MULTITOUCH_DISTINCT, these kinds of input devices will not actually provide full two-finger gestures since the input is being transformed to cursor movement on the screen. That is, single finger gestures will move a cursor; two-finger swipes will result in single-finger touch events; other two-finger gestures will result in the corresponding two-finger touch event.</string>
    <string name="feature_description_faketouch_multitouch_jazzhand">The device does not have a touch screen, but does support touch emulation for basic events that supports tracking a hand of fingers (5 or more fingers) fully independently. This is an extension of FEATURE_FAKETOUCH for input devices with this capability. Note that unlike a multitouch screen as defined by FEATURE_TOUCHSCREEN_MULTITOUCH_JAZZHAND, not all two finger gestures can be detected due to the limitations described for FEATURE_FAKETOUCH_MULTITOUCH_DISTINCT.</string>
    <string name="feature_description_fingerprint">The device has biometric hardware to detect a fingerprint.</string>
    <string name="feature_description_freeform_window_management">The device supports freeform window management. Windows have title bars and can be moved and resized.</string>
    <string name="feature_description_gamepad">The device has all of the inputs necessary to be considered a compatible game controller, or includes a compatible game controller in the box.</string>
    <string name="feature_description_hifi_sensors">The device supports high fidelity sensor processing capabilities.</string>
    <string name="feature_description_home_screen">The device supports a home screen that is replaceable by third party applications.</string>
    <string name="feature_description_input_methods">The device supports adding new input methods implemented with the InputMethodService API.</string>
    <string name="feature_description_leanback">The device supports leanback UI. This is typically used in a living room television experience, but is a software feature unlike FEATURE_TELEVISION. Devices running with this feature will use resources associated with the "television" UI mode.</string>
    <string name="feature_description_live_tv">The device supports live TV and can display contents from TV inputs implemented with the TvInputService API.</string>
    <string name="feature_description_live_wallpaper">The device supports live wallpapers.</string>
    <string name="feature_description_location">The device supports one or more methods of reporting current location.</string>
    <string name="feature_description_location_gps">The device has a Global Positioning System receiver and can report precise location.</string>
    <string name="feature_description_location_network">The device can report location with coarse accuracy using a network-based geolocation system.</string>
    <string name="feature_description_managed_users">The device supports creating secondary users and managed profiles via DevicePolicyManager.</string>
    <string name="feature_description_microphone">The device can record audio via a microphone.</string>
    <string name="feature_description_midi">The device has a full implementation of the android.media.midi.* APIs.</string>
    <string name="feature_description_nfc">The device can communicate using Near-Field Communications (NFC).</string>
    <string name="feature_description_nfc_host_card_emulation">The device supports host- based NFC card emulation.</string>
    <string name="feature_description_nfcf_host_card_emulation">The device supports host- based NFC-F card emulation.</string>
    <string name="feature_description_opengles_extension_pack">The device supports the OpenGL ES Android Extension Pack.</string>
    <string name="feature_description_picture_in_picture">The device supports picture-in-picture multi-window mode.</string>
    <string name="feature_description_printing">The device supports printing.</string>
    <string name="feature_description_screen_landscape">The device supports landscape orientation screens. For backwards compatibility, you can assume that if neither this nor FEATURE_SCREEN_PORTRAIT is set then the device supports both portrait and landscape.</string>
    <string name="feature_description_screen_portrait">The device supports portrait orientation screens. For backwards compatibility, you can assume that if neither this nor FEATURE_SCREEN_LANDSCAPE is set then the device supports both portrait and landscape.</string>
    <string name="feature_description_securely_removes_users">The device supports secure removal of users. When a user is deleted the data associated with that user is securely deleted and no longer available.</string>
    <string name="feature_description_sensor_accelerometer">The device includes an accelerometer.</string>
    <string name="feature_description_sensor_ambient_temperature">The device includes an ambient temperature sensor.</string>
    <string name="feature_description_sensor_barometer">The device includes a barometer (air pressure sensor).</string>
    <string name="feature_description_sensor_compass">The device includes a magnetometer (compass).</string>
    <string name="feature_description_sensor_gyroscope">The device includes a gyroscope.</string>
    <string name="feature_description_sensor_heart_rate">The device includes a heart rate monitor.</string>
    <string name="feature_description_sensor_heart_rate_ecg">The heart rate sensor on this device is an Electrocargiogram.</string>
    <string name="feature_description_sensor_light">The device includes a light sensor.</string>
    <string name="feature_description_sensor_proximity">The device includes a proximity sensor.</string>
    <string name="feature_description_sensor_relative_humidity">The device includes a relative humidity sensor.</string>
    <string name="feature_description_sensor_step_counter">The device includes a hardware step counter.</string>
</resources>